# kiddo

./: .envrc  .gitignore  README.md  pyproject.toml
kiddo/: api.py  cli.py
test/kiddo/: handlers.py  test_api_login.py  test_api_me.py  test_emoji_login.py
