[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kiddo"
version = "0.1.2"
description = "A tool for interacting with HarvestOS data"
authors = [
    { name = "Tim Potter", email = "tim.potter@canberra.edu.au" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "bs4>=0.0.2",
    "click>=8.1.8",
    "requests>=2.32.4",
]

[project.scripts]
kiddo = "kiddo.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-httpserver>=1.1.1",
]
